--- a/src/swipestyles.module.css
+++ b/src/swipestyles.module.css
@@ -1,24 +1,18 @@
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
-    /* background: lightblue; */
     cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
       auto;
     display: flex;
     align-items: center;
-    height: 100%;
+    max-height: 50%;
     justify-content: center;
   }
-  
-  .custom-cursor {
-    width: 1.25rem;
-    height: 1.25rem;
-    border-radius: 100%;
-    background-color: #bfff00;
-    position: fixed;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-    transition: width .3s, height .3s, opacity .3s;
-  }
-
+ 
 .deck {
     position: absolute;
     width: 300px;
@@ -28,8 +22,9 @@
     align-items: center;
     justify-content: center;
     touch-action: none;
+     /* margin: auto; */
   }
-  
+
 .deck > div {
     background-color: rgb(255, 255, 255);
     background-size: cover;
@@ -45,7 +40,17 @@
     /* border: 10px solid white; */
   }
 
-  
+  .custom-cursor {
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 100%;
+    background-color: #bfff00;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    transition: width .3s, height .3s, opacity .3s;
+  }
+
   .card-details {
     position: absolute;
     bottom: -60px;
@@ -54,13 +59,13 @@
 
  
   .result-image {
-    width: 33.33%; /* Set width to 1/3 of the container's width */
-    height: 33.33%; /* Set height to 1/3 of the container's height */
-    max-width: none; /* Remove max-width constraint */
-    max-height: none; /* Remove max-height constraint */
+    width: 33.33%;
+    height: 33.33%;
+    max-width: none; 
+    max-height: none;
     position: absolute;
-    top: 50%; /* Center vertically */
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%); /* Center the image within the container */
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
   }
   
