--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ html, body, #root {
   color: #000000;
   font-size: 3em;
   margin-left: 25px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .button-style {
@@ -30,21 +32,28 @@ html, body, #root {
   border: 2px solid black; 
   border-radius: 25px; 
   cursor: pointer; 
+  transition: background-color 0.3s, color 0.3s; 
 }
 
 .button-style:hover {
-  background-color: #02afd7;
-  border: 2px solid black;;
+  background-color: black;
+  color: white;
+  /* border: 2px solid black; */
 }
 
 .button-style:active {
-  background-color: #02afd7,; 
+  background-color: black;
+  color: white;
 }
 
 .proceed {
   display: flex;
   align-items: center; 
   gap: 10px; 
+  /* margin-top: 0;
+  padding-top: 0; */
+  margin: 0;
+  padding: 0;
 }
 
 .button-style {
@@ -125,7 +134,7 @@ footer {
 }
 
 .css-typing p:nth-child(1) {
-  width: 15em;
+  width: 13.5em;
   -webkit-animation: type 2s steps(40, end);
   animation: type 2s steps(40, end);
   -webkit-animation-fill-mode: forwards;
@@ -133,7 +142,7 @@ footer {
 }
 
 .css-typing p:nth-child(2) {
-  width: 15em;
+  width: 13.5em;
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end);
   animation: type2 2s steps(40, end);
@@ -144,7 +153,18 @@ footer {
 }
 
 .css-typing p:nth-child(3) {
-  width: 23em;
+  width: 22.5em;
+  opacity: 0;
+  -webkit-animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;;
+  animation: type2 2s steps(40, end),  blink .5s step-end infinite alternate;;
+  -webkit-animation-delay: 4s;
+  animation-delay: 4s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+/* .css-typing p:nth-child(3) {
+  width: 22.5em;
   opacity: 0;
   -webkit-animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
   animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
@@ -152,7 +172,7 @@ footer {
   animation-delay: 4s;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-}
+} */
 
 .css-typing .proceed{
   color: #a79e9e;
