--- a/src/swipestyles.module.css
+++ b/src/swipestyles.module.css
@@ -5,14 +5,23 @@ html, body, #root {
 }
 
 .container {
+    cursor: url('src/assets/hand2.png') 39 39,
+      auto;
+    display: flex;
+    align-items: center;
+    max-height: 50%;
+    justify-content: center;
+  } 
+ 
+  /* .container {
     cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
       auto;
     display: flex;
     align-items: center;
     max-height: 50%;
     justify-content: center;
-  }
- 
+  } */
+
 .deck {
     position: absolute;
     width: 300px;
@@ -44,7 +53,6 @@ html, body, #root {
     width: 1.25rem;
     height: 1.25rem;
     border-radius: 100%;
-    background-color: #bfff00;
     position: fixed;
     transform: translate(-50%, -50%);
     pointer-events: none;
