--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@ footer {
 }
 
 .css-typing p:nth-child(3) {
-  width: 22.5em;
+  width: 22.9em;
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;;
   animation: type2 2s steps(40, end),  blink .5s step-end infinite alternate;;
@@ -176,10 +176,12 @@ footer {
 
 .css-typing .proceed{
   color: #a79e9e;
-  width: 25em;
+  width: 10em;
   opacity: 0;
-  -webkit-animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
-  animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
+  -webkit-animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;;
+  animation: type2 2s steps(40, end),  blink .5s step-end infinite alternate;;
+  /* -webkit-animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
+  animation: type3 2s steps(20, end), blink .5s step-end infinite alternate; */
   -webkit-animation-delay: 4s;
   animation-delay: 7s;
   -webkit-animation-fill-mode: forwards;
