--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html, body, #root {
-  /* height: 100%; */
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -50,14 +51,13 @@ html, body, #root {
   display: flex;
   align-items: center; 
   gap: 10px; 
-  /* margin-top: 0;
-  padding-top: 0; */
   margin: 0;
   padding: 0;
 }
 
-.button-style {
-  /* Your existing styles for button-style */
+.p{
+  margin: 0; 
+  padding: 0;
 }
 
 /* body {
@@ -70,6 +70,8 @@ html, body, #root {
   /* background-color: #EBE9D1; */
 /* } */ */
 
+
+
 .content-wrapper {
   position: relative;
   padding-top: 60px; 
@@ -77,6 +79,7 @@ html, body, #root {
   margin: auto;
   overflow: hidden;
 }
+
 
 /* .header-nav {
   background: #4d1717;
@@ -133,6 +136,12 @@ footer {
   overflow: hidden;
 }
 
+.css-typing aside {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+
 .css-typing p:nth-child(1) {
   width: 13.5em;
   -webkit-animation: type 2s steps(40, end);
@@ -178,22 +187,23 @@ footer {
   color: #a79e9e;
   width: 10em;
   opacity: 0;
-  -webkit-animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;;
-  animation: type2 2s steps(40, end),  blink .5s step-end infinite alternate;;
+  -webkit-animation: type3 2s steps(40, end), blink .5s step-end infinite alternate;;
+  animation: type3 2s steps(40, end),  blink .5s step-end infinite alternate;;
   /* -webkit-animation: type3 2s steps(20, end), blink .5s step-end infinite alternate;
   animation: type3 2s steps(20, end), blink .5s step-end infinite alternate; */
   -webkit-animation-delay: 4s;
-  animation-delay: 7s;
+  animation-delay: 6s;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
+
 
 @keyframes type {
   0% {
     width: 0;
   }
   99.9% {
-    border-right: .15em solid orange;
+    border-right: .15em solid rgb(173, 67, 148);
   }
   100% {
     border: none;
@@ -205,7 +215,7 @@ footer {
     width: 0;
   }
   99.9% {
-    border-right: .15em solid orange;
+    border-right: .15em solid rgb(173, 67, 148);
   }
   100% {
     border: none;
@@ -220,7 +230,7 @@ footer {
     opacity: 1;
   }
   99.9% {
-    border-right: .15em solid orange;
+    border-right: .15em solid rgb(173, 67, 148);
   }
   100% {
     opacity: 1;
@@ -236,7 +246,7 @@ footer {
     opacity: 1;
   }
   99.9% {
-    border-right: .15em solid orange;
+    border-right: .15em solid rgb(84, 118, 61);
   }
   100% {
     opacity: 1;
@@ -275,112 +285,6 @@ footer {
 }
 @-webkit-keyframes blink {
   50% {
-    border-color: tranparent;
-  }
-}
-/* .about p {
-  border-right: .15em solid rgb(30, 42, 108);
-  width: 40em;  */
-  /* -webkit-animation: type 2s steps(40, end);  */
-  /* animation: type 2s steps(40, end); */
-  /* -webkit-animation-fill-mode: forwards; */
-  /* animation-fill-mode: forwards; */
-  /* white-space: nowrap;
-  overflow: hidden;
-}
-
-.about p:nth-child(1) {
-  width: 7.3em;
-  -webkit-animation: type 2s steps(40, end);
-  animation: type 2s steps(40, end);
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.about p:nth-child(2) {
-  /* width: 11.5em; */
-  /* opacity: 0;
-  -webkit-animation: type2 2s steps(40, end);
-  animation: type2 2s steps(40, end);
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-} */
-
-/* @keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    border: none;
-  }
-}
-
-@-webkit-keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    border: none;
-  }
-}
-
-@keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-@-webkit-keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid orange;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-
-@keyframes blink {
-  50% {
     border-color: transparent;
   }
 }
-@-webkit-keyframes blink {
-  50% {
-    border-color: tranparent;
-  }
-}
-
-.blurred-element {
-  filter: blur(5px);
-  transition: filter 0.3s ease;
-}
-
-.blurred-element:hover {
-  filter: blur(0px);
-}  */
