--- a/src/swipestyles.module.css
+++ b/src/swipestyles.module.css
@@ -5,7 +5,7 @@ html, body, #root {
 }
 
 .container {
-    cursor: url('src/assets/hand2.png') 39 39,
+    cursor: url('src/assets/hand.png') 39 39,
       auto;
     display: flex;
     align-items: center;
@@ -42,6 +42,7 @@ html, body, #root {
     max-height: 400px; 
     will-change: transform;
     border-radius: 10px;
+    
     box-shadow: 0 6px 20px -5px rgba(50, 50, 73, 0.2), 0 5px 5px -5px rgba(50, 50, 73, 0.1);
     /* border: 10px solid white; */
   }
