--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ html, body, #root {
     min-height: 70%;
     width: 100%;
     background-color: blue;
+    overflow: hidden;
   }
   
   .footer {
