--- a/src/Appold.css
+++ b/src/Appold.css
@@ -87,7 +87,7 @@ html, body, #root {
   /* position: relative;
   padding-top: 60px;  */
   /* max-height: 70%; */
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .footer {
