--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ html, body, #root {
     font-family: 'Helvetica';
     font-weight: bold;
     color: #000000;
-    font-size: 3em;
+    font-size: 2.5em;
     margin-top: 25px;  
     margin-left: 25px;
   }
@@ -38,8 +38,19 @@ html, body, #root {
     color: #000000;
     font-family: 'Helvetica';
     font-weight: bold;    
-    font-size: 2em;
+    font-size: 1.5em;
     margin-bottom: 25px;  
+    margin-left: 25px;
+  }
+
+  .intro {
+    font-family: 'Helvetica';
+    font-weight: bold italic;
+    color: #000000;
+    font-size: 2em;
+    margin-left: 25px;
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: 25px;
   }
   
@@ -64,3 +75,4 @@ html, body, #root {
     background-color: black;
     color: white;
   }
+
