--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@ html, body, #root {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin-left: 25px;
   }
   
   .header { 
-    min-height: 15%;
+    min-height: 10%;
     width: 100%;
-    background-color: orange;
     font-family: 'Helvetica';
     font-weight: bold;
     color: #000000;
@@ -22,19 +22,29 @@ html, body, #root {
     margin-top: 25px;  
     margin-left: 25px;
   }
+
+
+.intro {
+    font-family: 'Helvetica';
+    font-weight: bold italic;
+    color: #000000;
+}
+  
   
   .content-wrapper {
     flex-grow: 1; 
-    min-height: 70%;
     width: 100%;
-    background-color: blue;
     overflow: hidden;
+    font-size: 2.5em;
+    margin-left: 25px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 25px;
   }
   
   footer {
-    min-height: 15%; 
+    min-height: 10%; 
     width: 100%;
-    background-color: purple;
     color: #000000;
     font-family: 'Helvetica';
     font-weight: bold;    
@@ -43,36 +53,11 @@ html, body, #root {
     margin-left: 25px;
   }
 
-  .intro {
-    font-family: 'Helvetica';
-    font-weight: bold italic;
-    color: #000000;
-    font-size: 2em;
-    margin-left: 25px;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 25px;
-  }
-  
-  .button-style {
-    padding: 10px 20px;
-    font-family: 'Helvetica'; 
-    font-size: 1em; 
-    font-weight: bold;
-    color: black;
-    border: 2px solid black; 
-    border-radius: 25px; 
-    cursor: pointer; 
-    transition: background-color 0.3s, color 0.3s; 
-  }
-  
-  .button-style:hover {
-    background-color: black;
-    color: white;
-  }
-  
-  .button-style:active {
-    background-color: black;
-    color: white;
-  }
 
+  @media screen and (max-width: 414px) {
+    .header, .content-wrapper, footer {
+      margin-left: 10px;
+    }
+  }
+  
+  
