--- a/src/components/Deck/swipestyles.module.css
+++ b/src/components/Deck/swipestyles.module.css
@@ -28,6 +28,7 @@
 
 .container {
     overscroll-behavior: none;
+    overflow: hidden;
     cursor: url('../../assets/icon.png') 39 39, auto;
   } 
   
