--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,11 @@ html, body, #root {
   color: #000000;
 }
 
+.deck{
+overflow-x:hidden;}
+
 .content-wrapper {
   flex-grow: 1; 
-  width: 100%;
   overflow: hidden;
   font-size: 2.5em;
   margin-left: 25px;
