--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@ html, body, #root {
   color: #000000;
 }
 
-
 .content-wrapper {
+  max-width: 100%;
   flex-grow: 1; 
   overflow: hidden;
   font-size: 2.5em;
