--- a/src/components/Deck/swipestyles.module.css
+++ b/src/components/Deck/swipestyles.module.css
@@ -55,117 +55,17 @@
     align-items: center;
   }
 
-  .result-image {
-    width: 33.33%;
-    height: 33.33%;
-    max-width: none; 
-    max-height: none;
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    height: 100%; 
-  }
-  
-  .result-text{
-
-    width: 13.5em;
-    -webkit-animation: type 2s steps(40, end);
-    animation: type 2s steps(40, end);
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-
-@keyframes type {
-    0% {
-      width: 0;
-    }
-    99.9% {
-      border-right: .15em solid rgb(173, 67, 148);
-    }
-    100% {
-      border: none;
+  @media screen and (max-width: 480px) {
+    .deck {
+      width: 70%; 
+      transform: translateX(-50%);
     }
   }
   
-  @-webkit-keyframes type {
-    0% {
-      width: 0;
-    }
-    99.9% {
-      border-right: .15em solid rgb(173, 67, 148);
-    }
-    100% {
-      border: none;
-    }
-  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .deck {
+      width: 70%; 
   
-  @keyframes type2 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    99.9% {
-      border-right: .15em solid rgb(173, 67, 148);
-    }
-    100% {
-      opacity: 1;
-      border: none;
-    }
-  }
-  
-  @-webkit-keyframes type2 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    99.9% {
-      border-right: .15em solid rgb(84, 118, 61);
-    }
-    100% {
-      opacity: 1;
-      border: none;
-    }
-  }
-  
-  @keyframes type3 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @-webkit-keyframes type3 {
-    0% {
-      width: 0;
-    }
-    1% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @keyframes blink {
-    50% {
-      border-color: transparent;
-    }
-  }
-  @-webkit-keyframes blink {
-    50% {
-      border-color: transparent;
+      transform: translateX(-50%); 
     }
   }
